--- a/MarkDown/学生管理.md
+++ b/MarkDown/学生管理.md
@@ -3,10 +3,10 @@
 ### 概要设计
 #### 1. 前端
 ```
-	root-学校1-学院1-专业1-班级1     
-	   |    |-学院2-专业1-班级1
-	   |	            |-班级2
-	   |-学校2-学院1 
+	root-[1]学校1-[11]学院1-[111]专业1-[1111]班级1     
+	   |    |-[12]学院2-[121]专业1-[1211]班级1
+	   |	                  |-[1212]班级2
+	   |-[2]学校2-[21]学院1 
 
 
 	班级学生表
@@ -26,33 +26,18 @@
 删除节点(Tree,Node)
 
 ```
-##### 树的节点  
+##### 树的节点(可能是学生)  
 ```c
 	Struct Node
    {
 		//指向父节点的指针
-		char code[6];//代码
+		char code[6];//代码（同时也是学生的id)
 		char name[100]//名称;
-		//指向子节点的指针
+		int score；(只有学生有分数)
+		//指向子节点的指针（学生节点没有子节点）
    }
 ```
-##### 堆栈节点
-```
-   Struct SNode
-   {
-		//指向父节点的指针
-		char code[6];//代码
-		char name[100]//名称;
-		//指向子节点的指针
-   }
-```
- ##### 学生
-```
-char name[];
-char id;
-int score；
-```
- ##### 堆栈
+##### 堆栈
 
 #### 3. 模块功能   
    * ##### 树层级 
@@ -75,94 +60,115 @@ int score；
 		将操作后的树以一定格式记录到文件
 
  4. 函数设计
-	##### 初始化
-	* void Init(Tree *a,Stack a)
-	##### 接收用户输入
-	* void Catch(char S[100])      
-	抓取用户输入的中的关键字和待操作的编码对象
-	```
-	将S分为关键字（head）和code(body)两段      
-	
-	char tmp[2];
-	char tmpcode[6];
-	if(tmp！=rv){	取6位code	 }//因为撤销不需要code避免读入空字符串
-	if(tmp==ad){Ad(Tree *a,tmpcode)}
-	else.....
-	//格式错误特判重输入
-	```
-	##### 持久化(录入文件)
-	* void Export(Tree *a)
+	1. #### 工具类
+		##### 初始化
+		* void Init(Tree *a,Stack a)
+		##### 复制节点数据
+		* void Copyatob(Node *a,Node *b)   
+		复制a中信息到b;		 
+		##### 接收用户输入
+		* void Catch(char S[100])      
+		抓取用户输入的中的关键字和待操作的编码对象
 		```
-			
-		```
-    ##### 读取文件
-	* void Inport(Tree *a)
-     
-	##### 增加 
-	* void Ad(Tree *a,Node tmp)
-	```      
-	读取新节点的父节点和子节点
-	并修改这两个节点的指针
-	```
-	##### 删除
-	* void De(Tree *a,char code[6])
-    ```
-	根据code删除对应的节点
-	``` 
-	##### 查 
-	* Node Fd(Tree *a,char a[100],int Mode)
-	```
-	//Mode 0精确 Mode 1模糊
-	if(!mode)
-	{
+		将S分为关键字（head）和code(body)两段      
+		
+		char tmp[2];
 		char tmpcode[6];
-		//只要a[100]前面的六个code字符
-		遍历树(Tree*a){
-			if(Node.code==tmpcode[6]){
-			返回找到的节点；
-			
-			}
-		}
-	}
-	else//模糊怎么办 压到栈里？
-	{
-		遍历树(){
-			if(Node.name==a[100]//NODE可能是学院也可能是学生){
-				返回可能的节点；
-				
-			}
-		}
-	}
-	``` 
-	##### 修改
-	* void Cg(Tree *a,char code[6])
-    ```
-	temp=Fd(Tree *a,char code[],1);
-	然后修改temp
-	``` 
-	##### 输出（+统计）
-	*PrintAll(Tree *a,int Mode,char code[6])
-```
-{	
-	//Mode 0 输出整棵树 并将所有学生制表 以及班级的统计数据
-	//Mode 1 不涉及班级的输出
-	只需要输出到code代表的节点以及它的子节点
-	//Mode 2 输入的code是班级
-	输出到该班级 只讲该班级的学生单独制表 以及统计数据
-	//Mode 3 输入的Code是学生
-	输出到该班级
-	将该学生的数据制表（不要输出其他学生 其他班级的数据）
+		if(tmp！=rv){	取6位code	 }//因为撤销不需要code避免读入空字符串
+		if(tmp==ad)
+		{
+			Node tmp;
+			//scanf 让用户输入信息并录入到tmp中;
+			if(//通过code判断是普通节点还是学生){
 
-	格式依照上述需求
-}
-```
+
+			}
+
+			Ad(Tree *a,Node *tmp);
+		}
+		else.....
+		//格式错误特判重输入
+		```
+		##### 持久化(录入文件)
+		* void Export(Tree *a)
+		##### 读取文件
+		* void Inport(Tree *a)
+		
+	2. 业务函数
+		##### 增加 
+		* void Ad(Tree *a,Node tmp)
+		```
+		通过新节点的Code      
+		读取新节点的父节点和子节点
+		并修改这两个节点的指针
+		
+		```
+		##### 删除
+		* void De(Tree *a,char code[6])
+		```
+		tmp=Fd(*a,code,1);
+		根据code删除对应的节点
+		``` 
+		##### 查 
+		* Node Fd(Tree *a,char a[100],int Mode)
+		```
+		//Mode 0精确 Mode 1模糊
+
+		Node Ran;
+		if(!mode)
+		{
+			char tmpcode[6];
+			//只要a[100]前面的六个code字符
+			遍历树(Tree*a){
+				if(Node.code==tmpcode[6]){
+				Copyatob(Node,R)
+				return R;
+				
+				}
+			}
+		}
+		else//模糊 将所有的节点接成链表？
+		{
+			遍历树(){
+				if(Node.name==a[100]//NODE可能是学院也可能是学生){
+					找到一个合法的,把R作为头节点（头节点也存数据）
+					接到R的后面当作链表 最后返回R
+					//模糊只用于输出 因此可以在这里直接打印
+					而不需要调用PrintAll
+				}
+			}
+		}
+		``` 
+		##### 修改
+		* void Cg(Tree *a,char code[6])
+		```
+		temp=Fd(Tree *a,char code[],1);
+		然后修改temp
+		``` 
+		##### 输出（+统计）
+		* PrintAll(Tree *a,int Mode,char code[6])
+	```
+	{	
+		//Mode 0 输出整棵树 并将所有学生制表 以及班级的统计数据
+		//Mode 1 不涉及班级的输出
+		只需要输出到code代表的节点以及它的子节点
+		//Mode 2 输入的code是班级
+		输出到该班级 只将该班级的学生单独制表 以及统计数据
+		//Mode 3 输入的Code是学生
+		输出到该班级
+		将该学生的数据制表（不要输出其他学生 其他班级的数据）
+
+		格式依照上述需求
+	}
+	```
+
 #### 5.  Ex
    ##### 撤销 （关键字 rv）
   * void Revoke(Stack *s,Tree *a) 
- 非常麻烦！
+假如要操作班级非常麻烦！
 ```
 预想
-修改时将原来的节点Node作为SNODE压入栈中
+修改时将原来的节点Node压入栈中
 新建一个节点=原节点并进行相应修改
 将父节点的指针指向新节点 
 将子节点的指针指向新节点
